# milsko-quake

./: .gitignore  CMakeLists.txt  Makefile
include/: glquake.h  port.h  quakedef.h  sys.h
src/: gl.c  gl_draw.c  gl_mesh.c  gl_rmain.c  net_dgrm.c  net_udp.c  quake.rc  r_part.c  sys.c
